--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    apple
+    <header>
+    <nav>
+      <a href="">First</a>
+      <a href="">Second</a>
+    </nav>
+  </header>
 </body>
 </html>
